--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>BioFabric Network Alignment Visualization Package (BF-NAVP)</title>
+<title>VISNAB: Visualization of Network Alignments using BioFabric</title>
 <link rel="shortcut icon" href="http://www.BioFabric.org/favicon.ico" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="description" content="BioFabric is an interactive tool for visualizing and exploring large networks.">
@@ -33,7 +33,7 @@ font-family: Arial, Helvetica, sans-serif;
 <hr noshade="true"/>
 
 <center>
-<h1>BioFabric Network Alignment Visualization Plugin (BF-NAVP)</h1>
+<h1>VISNAB: Visualization of Network Alignments using BioFabric</h1>
 </center>
 
 <table>
@@ -55,7 +55,7 @@ font-family: Arial, Helvetica, sans-serif;
 <center>
 <table width="70%" cols="1">
 <tr><th bgcolor="#E0E0E0"><center>News</center></th></tr>
-<tr><td bgcolor="#E0E0E0"><center><b>September XX, 2018:</b> The BF-NAVP manuscript has been submitted</br></center></td></tr>
+<tr><td bgcolor="#E0E0E0"><center><b>September XX, 2018:</b> The VISNAB manuscript has been submitted</br></center></td></tr>
 </table>
 </center>
 
@@ -65,17 +65,17 @@ font-family: Arial, Helvetica, sans-serif;
 <h3>Description</h3>
 
 <center>
-<img src="images/yeastPerfect900pix.png" width="900" height="180" border="1" alt="BF-NAVP Network"/></a>
+<img src="images/yeastPerfect900pix.png" width="900" height="180" border="1" alt="VISNAB Network"/></a>
 </center>
 
 
 
 <p>
-The BioFabric Network Alignment Visualization Plugin (BF-NAVP) is a software tool that is designed to give network researchers the ability to usefully visualize
-the results of a network alignment, even for very large networks. NAVP provides the user with new insights into network alignment deficiencies that are 
+The Visualization of Network Alignments using BioFabric (VISNAB) plugin is a software tool that is designed to give network researchers the ability to usefully visualize
+the results of a network alignment, even for very large networks. VISNAB provides the user with new insights into network alignment deficiencies that are 
 not revealed through the simple evaluation and comparison of the standard numerical topological measures. 
 </p>
-Significant features for NAVP:
+Significant features for VISNAB:
 <ul>
 <li>
 Node groups and link groups provide a flexible method to characterize an alignment's topology. With BioFabric V2, node and link group annotations clearly highlight the different groups.
@@ -106,7 +106,7 @@ BioFabric provides the values of many common alignment measures, including EC, S
 
 <h4>Preparations</h4>
 <p>
-BF-NAVP requires that the user first install BioFabric Version 2 (Beta), which is currently under development. BioFabric is written in Java, and can be run 
+VISNAB requires that the user first install BioFabric Version 2 (Beta), which is currently under development. BioFabric is written in Java, and can be run 
 on your Windows, Mac, or Linux computer. For Windows, you will first need to install the Java Runtime Environment (JRE), which can be downloaded from 
 <a href="http://www.java.com/">here</a> (click the "Free Java Download" button). For the Mac, the executable already contains the JRE.
 </p>
@@ -116,10 +116,10 @@ available from the <a href="https://github.com/wjrl/BioFabric">GitHub</a> page.
 </p>
 <h4>Installing the Plugin</h4>
 <p>
-NAVP is written as a BioFabric Plugin. To install it, you will simply drop the <code>AlignmentPlugin.jar</code> file available (soon) on 
+VISNAB is written as a BioFabric plugin. To install it, you will simply drop the <code>AlignmentPlugin.jar</code> file available (soon) on 
 the <a href="https://github.com/wjrl/AlignmentPlugin">GitHub</a> project page into a directory on your computer. Start BioFabric, and use 
 <b>File->Set Plugin Directory...</b> to point to that directory where you have placed <code>AlignmentPlugin.jar</code>. Restart BioFabric,
-and the NAVP commands will appear in the <b>Tools->Network Alignment</b> menu.
+and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
 </p>
 
 <hr noshade="true" width="67%"/>
@@ -129,7 +129,7 @@ and the NAVP commands will appear in the <b>Tools->Network Alignment</b> menu.
 More complete documentation is being prepared. 
 </p>
 <p>
-To get started, once the plugin has been installed, NAVP commands can be run from the main <b>Tools->Network Alignment</b> menu. NAVP supports both SIF 
+To get started, once the plugin has been installed, VISNAB commands can be run from the main <b>Tools->Network Alignment</b> menu. VISNAB supports both SIF 
 and LEDA (GW) graph file formats, and the ALIGN file format for alignment files. The graphs must be undirected. 
 </p>
 <p>
@@ -162,8 +162,8 @@ Desai, R., Longabaugh, W.J.R., and Hayes, W. <i>BioFabric Visualization of Netwo
 <a name="sourcecode"/>
 <h3>Source Code</h3>
 <p>
-BioFabric source code is available on the <a href="https://github.com/wjrl/BioFabric">BioFabric GitHub</a> project page. BF-NAVP source code is available 
-on the <a href="https://github.com/wjrl/AlignmentPlugin">BF-NAVP GitHub</a> project page.
+BioFabric source code is available on the <a href="https://github.com/wjrl/BioFabric">BioFabric GitHub</a> project page. VISNAB source code is available 
+on the <a href="https://github.com/wjrl/AlignmentPlugin">VISNAB GitHub</a> project page.
 </p>
 
 <hr noshade="true" width="67%"/>
@@ -181,7 +181,7 @@ usability issues, you can send email to:
 <a name="credits"/>
 <h3>Credits</h3>
 <p>
-BF-NAVP was created by Rishi Desai, William Longabaugh, and Wayne Hayes.
+VISNAB was created by Rishi Desai, William Longabaugh, and Wayne Hayes.
 </p>
 
 <hr noshade="true" width="67%"/>
