--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -68,8 +68,6 @@ font-family: Arial, Helvetica, sans-serif;
 <img src="images/yeastPerfect900pix.png" width="900" height="180" border="1" alt="VISNAB Network"/></a>
 </center>
 
-
-
 <p>
 The Visualization of Network Alignments using BioFabric (VISNAB) plugin is a software tool that is designed to give network researchers the ability to usefully visualize
 the results of a network alignment, even for very large networks. VISNAB provides the user with new insights into network alignment deficiencies that are 
@@ -191,8 +189,7 @@ VISNAB was created by Rishi Desai, William Longabaugh, and Wayne Hayes.
 This software is licensed under the GNU Lesser General Public 
 License (LGPL), which is a standard "free software"
 and "open source" license.  A copy of the license agreement 
-is available online <a href="licenses/License.html">here</a>.  Note that
-some of the toolbar icons are distributed under <a href="licenses/LICENSE-SUN.txt">this</a> license.
+is available online <a href="licenses/License.html">here</a>.
 </p>
 <p>
 BioFabric is under continual development, and despite our best efforts 
