--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -3,8 +3,8 @@
 <title>VISNAB: Visualization of Network Alignments using BioFabric</title>
 <link rel="shortcut icon" href="http://www.BioFabric.org/favicon.ico" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="description" content="BioFabric is an interactive tool for visualizing and exploring large networks.">
-<meta name="keywords" content="networks, network visualization, systems biology software, graph layout, open-source, combing the hairball">
+<meta name="description" content="VISNAB is a BioFabric plugin that provides novel new visualization tools for exploring network alignments.">
+<meta name="keywords" content="network alignment, networks, network visualization, systems biology software, graph layout, open-source, combing the hairball">
 <style>
 body{
 font-family: Arial, Helvetica, sans-serif;
@@ -114,9 +114,9 @@ available from the <a href="https://github.com/wjrl/BioFabric">GitHub</a> page.
 </p>
 <h4>Installing the Plugin</h4>
 <p>
-VISNAB is written as a BioFabric plugin. To install it, you will simply drop the <code>AlignmentPlugin.jar</code> file available (soon) on 
-the <a href="https://github.com/wjrl/AlignmentPlugin">GitHub</a> project page into a directory on your computer. Start BioFabric, and use 
-<b>File->Set Plugin Directory...</b> to point to that directory where you have placed <code>AlignmentPlugin.jar</code>. Restart BioFabric,
+VISNAB is written as a BioFabric plugin. To install it, you will simply drop the <code>sVISNAB-V1.0.0.0.jar</code> file now available on 
+the <a href="https://github.com/wjrl/AlignmentPlugin">GitHub</a> project page in the downloads directory into a directory on your computer. Start BioFabric, and use 
+<b>File->Set Plugin Directory...</b> to point to that <i>directory</i> where you have placed <code>sVISNAB-V1.0.0.0.jar</code>. Restart BioFabric,
 and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
 </p>
 
@@ -203,7 +203,7 @@ and the authors disclaim any liability stemming from the use of this software.
 <hr noshade="true"/>
 
 <p>
-<b>Last updated: September XX, 2018</b>
+<b>Last updated: September 03, 2018</b>
 </p>
 </body>
 </html>
