--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -104,21 +104,41 @@ BioFabric provides the values of many common alignment measures, including EC, S
 
 <h4>Preparations</h4>
 <p>
-VISNAB requires that the user first install BioFabric Version 2 (Beta), which is currently under development. BioFabric is written in Java, and can be run 
-on your Windows, Mac, or Linux computer. For Windows, you will first need to install the Java Runtime Environment (JRE), which can be downloaded from 
+VISNAB is written as a BioFabric plugin, and requires that your first install BioFabric Version 2 (Beta), which is currently under development. 
+Note that the current production Version 1.0 of BioFabric is not designed to support plugins; <b>Version 2 is required</b>. BioFabric is written in Java, 
+and can be run on your Windows, Mac, or Linux computer. For Windows, you will first need to install the Java Runtime Environment (JRE), which can be downloaded from 
 <a href="http://www.java.com/">here</a> (click the "Free Java Download" button). For the Mac, the executable already contains the JRE.
 </p>
 <p>
-<b>NOTE:</b> Downloadable executables for BioFabric Version 2 (Beta) are still in preparation. In the meantime, the program can be built from source code 
-available from the <a href="https://github.com/wjrl/BioFabric">GitHub</a> page.
+BioFabric Version 2 (Beta) is currently available either as a zip file for Windows (named <code>BioFabric20B1.zip</code>) or as a mountable disk image 
+for Macs (named <code>BioFabricInstallImageV2BetaRel1.dmg</code>). These are both available from the 
+<a href="https://github.com/wjrl/BioFabric/releases/tag/V2.0Beta1a">BioFabric GitHub repository release page</a>. 
 </p>
+<ul>
+<li>
+<b>Windows:</b> Unzip the <code>BioFabric20B1.zip</code> file and drag the <code>BioFabric.exe</code> file out of the archive and 
+drop it on your desktop. Double-clicking on the desktop 
+icon will start the program running. On Windows, you will probably need to agree to run software from an unknown publisher, or read a 
+message that "Windows protected your PC", that the app is unrecognized, and you will need to click on the <b>More info</b> link gives you 
+the option to <b>Run Anyway</b>. (Note: The executable file <i>has been signed</i>, but the signing certificate has currently expired.) 
+</li><br/>
+<li>
+<b>Mac:</b> Double-click the downloaded <code>BioFabricInstallImageV2BetaRel1.dmg</code> disk image file to mount it, and then 
+open a Finder window for the mounted disk. From the Finder window, 
+drag the BioFabric icon inside onto your desktop (or, if you prefer, into your Applications folder). Both the disk image and the BioFabric program 
+itself have been signed. However, if <b>Mac Gatekeeper</b> has been set to restrict to only <b>App Store</b>, will need to launch <b>System Preferences</b>, 
+click on <b>Security & Privacy</b>, and on the <b>General</b> tab set <b>Allow apps downloaded from: App Store and identified developers</b>. 
+If you take this step, you may wish to reset it back to <b>App Store</b> after starting BioFabric the first time. 
+</li><br/>
+</ul>
+
 <h4>Installing the Plugin</h4>
-<p>
-VISNAB is written as a BioFabric plugin. To install it, you will simply drop the <code>sVISNAB-V1.0.0.1.jar</code> file now available on 
-the <a href="https://github.com/wjrl/AlignmentPlugin">GitHub</a> project page in the downloads directory into a directory on your computer. Start BioFabric, and use 
-<b>File->Set Plugin Directory...</b> to point to that <i>directory</i> where you have placed <code>sVISNAB-V1.0.0.1.jar</code>. Restart BioFabric,
-and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
-</p>
+The <b>VISNAB</b> plugin is a Java JAR file. This compiled JAR file is available on the 
+<a href="https://github.com/wjrl/AlignmentPlugin/releases/tag/v1.0.0.1">VISNAB GitHub repository release page</a>. To install it, download the 
+<code>VISNAB-V1.0.0.1.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
+VISNAB JAR file in that directory.) Start BioFabric, and use <b>File->Set Plugin Directory...</b> to point to the *directory* where you have placed 
+<code>sVISNAB-V1.0.0.1.jar</code>. Restart BioFabric, and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
+</b>
 
 <hr noshade="true" width="67%"/>
 <a name="docs"/>
