Update README and website, next pass

--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -126,7 +126,7 @@ the option to <b>Run Anyway</b>. (Note: The executable file <i>has been signed</
 <b>Mac:</b> Double-click the downloaded <code>BioFabricInstallImageV2BetaRel1.dmg</code> disk image file to mount it, and then 
 open a Finder window for the mounted disk. From the Finder window, 
 drag the BioFabric icon inside onto your desktop (or, if you prefer, into your Applications folder). Both the disk image and the BioFabric program 
-itself have been signed. However, if <b>Mac Gatekeeper</b> has been set to restrict to only <b>App Store</b>, will need to launch <b>System Preferences</b>, 
+itself have been signed. However, if <b>Mac Gatekeeper</b> has been set to restrict to only <b>App Store</b>, you will need to launch <b>System Preferences</b>, 
 click on <b>Security & Privacy</b>, and on the <b>General</b> tab set <b>Allow apps downloaded from: App Store and identified developers</b>. 
 If you take this step, you may wish to reset it back to <b>App Store</b> after starting BioFabric the first time. 
 </li><br/>
@@ -136,7 +136,7 @@ If you take this step, you may wish to reset it back to <b>App Store</b> after s
 The <b>VISNAB</b> plugin is a Java JAR file. This compiled JAR file is available on the 
 <a href="https://github.com/wjrl/AlignmentPlugin/releases/tag/v1.0.0.1">VISNAB GitHub repository release page</a>. To install it, download the 
 <code>VISNAB-V1.0.0.1.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
-VISNAB JAR file in that directory.) Start BioFabric, and use <b>File->Set Plugin Directory...</b> to point to the *directory* where you have placed 
+VISNAB JAR file in that directory.) Start BioFabric, and use <b>File->Set Plugin Directory...</b> to point to the <i>directory</i> where you have placed 
 <code>sVISNAB-V1.0.0.1.jar</code>. Restart BioFabric, and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
 </b>
 
