Update README and website, again.

--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -119,7 +119,7 @@ for Macs (named <code>BioFabricInstallImageV2BetaRel1.dmg</code>). These are bot
 <b>Windows:</b> Unzip the <code>BioFabric20B1.zip</code> file and drag the <code>BioFabric.exe</code> file out of the archive and 
 drop it on your desktop. Double-clicking on the desktop 
 icon will start the program running. On Windows, you will probably need to agree to run software from an unknown publisher, or read a 
-message that "Windows protected your PC", that the app is unrecognized, and you will need to click on the <b>More info</b> link gives you 
+message that "Windows protected your PC", that the app is unrecognized, and you will need to click on the <b>More info</b> link to be able to choose
 the option to <b>Run Anyway</b>. (Note: The executable file <i>has been signed</i>, but the signing certificate has currently expired.) 
 </li><br/>
 <li>
@@ -135,7 +135,7 @@ If you take this step, you may wish to reset it back to <b>App Store</b> after s
 <h4>Installing the Plugin</h4>
 The <b>VISNAB</b> plugin is a Java JAR file. This compiled JAR file is available on the 
 <a href="https://github.com/wjrl/AlignmentPlugin/releases/tag/v1.0.0.1">VISNAB GitHub repository release page</a>. To install it, download the 
-<code>VISNAB-V1.0.0.1.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
+<code>sVISNAB-V1.0.0.1.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
 VISNAB JAR file in that directory.) Start BioFabric, and use <b>File->Set Plugin Directory...</b> to point to the <i>directory</i> where you have placed 
 <code>sVISNAB-V1.0.0.1.jar</code>. Restart BioFabric, and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
 </b>
@@ -172,7 +172,7 @@ Available commands include:
 <h3>Publications</h3>
 <ul>
 <li>
-Desai, R., Longabaugh, W.J.R., and Hayes, W. <i>BioFabric Visualization of Network Alignments</i> (currently in preparation)
+Desai, R.M., Longabaugh, W.J.R., and Hayes, W.B. <i>BioFabric Visualization of Network Alignments</i> (currently in preparation)
 </li>
 </ul>
 
@@ -223,7 +223,7 @@ and the authors disclaim any liability stemming from the use of this software.
 <hr noshade="true"/>
 
 <p>
-<b>Last updated: September 03, 2018</b>
+<b>Last updated: September 04, 2018</b>
 </p>
 </body>
 </html>
