--- a/website/VISNAB/index.html
+++ b/website/VISNAB/index.html
@@ -55,7 +55,7 @@ font-family: Arial, Helvetica, sans-serif;
 <center>
 <table width="70%" cols="1">
 <tr><th bgcolor="#E0E0E0"><center>News</center></th></tr>
-<tr><td bgcolor="#E0E0E0"><center><b>September XX, 2018:</b> The VISNAB manuscript has been submitted</br></center></td></tr>
+<tr><td bgcolor="#E0E0E0"><center><b>June XX, 2019:</b> The VISNAB manuscript has been submitted</br></center></td></tr>
 </table>
 </center>
 
@@ -104,40 +104,44 @@ BioFabric provides the values of many common alignment measures, including EC, S
 
 <h4>Preparations</h4>
 <p>
-VISNAB is written as a BioFabric plugin, and requires that your first install BioFabric Version 2 (Beta), which is currently under development. 
-Note that the current production Version 1.0 of BioFabric is not designed to support plugins; <b>Version 2 is required</b>. BioFabric is written in Java, 
-and can be run on your Windows, Mac, or Linux computer. For Windows, you will first need to install the Java Runtime Environment (JRE), which can be downloaded from 
-<a href="http://www.java.com/">here</a> (click the "Free Java Download" button). For the Mac, the executable already contains the JRE.
+VISNAB is written as a BioFabric plugin, and requires that your first install <b>BioFabric Version 2 Beta Release 2</b> (or higher). 
+Note that the current production Version 1.0 of BioFabric is <i>not designed</i> to support plugins; <b>Version 2 Beta Release 2 or higher is required</b>. 
+BioFabric is written in Java, and can be run on your Windows, Mac, or Linux computer. Starting with Version 2 Beta Release 2, the Java runtime 
+(OpenJDK 12) is <i>bundled with</i> BioFabric on all platforms, so a separate Java download is no longer required.
 </p>
 <p>
-BioFabric Version 2 (Beta) is currently available either as a zip file for Windows (named <code>BioFabric20B1.zip</code>) or as a mountable disk image 
-for Macs (named <code>BioFabricInstallImageV2BetaRel1.dmg</code>). These are both available from the 
-<a href="https://github.com/wjrl/BioFabric/releases/tag/V2.0Beta1a">BioFabric GitHub repository release page</a>. 
+BioFabric Version 2 Beta Release 2 is currently available either as a zip file for Windows (named <code>BioFabric20B2.zip</code>),
+as a mountable disk image for Mac (named <code>BioFabricInstallImageV2BetaRel2.dmg</code>), or as a tgz file for Linux (named <code>BioFabric-2.0.B.2.tgz</code>).
+These are all available from the <a href="https://github.com/wjrl/BioFabric/releases/tag/V2.0Beta2">BioFabric GitHub repository release page</a>. 
 </p>
 <ul>
 <li>
-<b>Windows:</b> Unzip the <code>BioFabric20B1.zip</code> file and drag the <code>BioFabric.exe</code> file out of the archive and 
-drop it on your desktop. Double-clicking on the desktop 
-icon will start the program running. On Windows, you will probably need to agree to run software from an unknown publisher, or read a 
-message that "Windows protected your PC", that the app is unrecognized, and you will need to click on the <b>More info</b> link to be able to choose
-the option to <b>Run Anyway</b>. (Note: The executable file <i>has been signed</i>, but the signing certificate has currently expired.) 
+<b>Windows:</b> Unzip the <code>BioFabric20B2.zip</code> file as a folder on your desktop. Go into the folder. If you want to install 
+BioFabric in the Windows <b>Program Files</b> folder, you will need to run the BioFabricInstaller as an Admin user. To do that, 
+right-click on the BioFabricInstaller program and choose <b>Run as administrator</b>. If you are not an Admin, you will need to 
+install it somewhere within your home directory by changing the install location as part of the installation. Once the installation is 
+complete, you can right-click on the BioFabric program and select <b>Create shortcut</b>, then e.g. drag it to your desktop.
 </li><br/>
 <li>
-<b>Mac:</b> Double-click the downloaded <code>BioFabricInstallImageV2BetaRel1.dmg</code> disk image file to mount it, and then 
-open a Finder window for the mounted disk. From the Finder window, 
-drag the BioFabric icon inside onto your desktop (or, if you prefer, into your Applications folder). Both the disk image and the BioFabric program 
-itself have been signed. However, if <b>Mac Gatekeeper</b> has been set to restrict to only <b>App Store</b>, you will need to launch <b>System Preferences</b>, 
-click on <b>Security & Privacy</b>, and on the <b>General</b> tab set <b>Allow apps downloaded from: App Store and identified developers</b>. 
-If you take this step, you may wish to reset it back to <b>App Store</b> after starting BioFabric the first time. 
+<b>Mac:</b> Double-click the downloaded <code>BioFabricInstallImageV2BetaRel2.dmg</code> disk image file to mount it, and then 
+open a Finder window for the mounted disk. From the Finder window, drag the BioFabric icon inside onto your desktop (or, if you prefer, 
+into your Applications folder).If <b>Mac Gatekeeper</b> has been set to restrict to only <b>App Store</b>, you will need to 
+launch <b>System Preferences</b>, click on <b>Security & Privacy</b>, and on the <b>General</b> tab set <b>Allow apps downloaded 
+from: App Store and identified developers</b>. If you take this step, you probably want to reset it back to <b>App Store</b> 
+after starting BioFabric the first time. 
+</li><br/>
+<li>
+<b>Linux:</b> Untar the <code>BioFabric-2.0.B.2.tgz</code> file (<code>tar xvzf BioFabric-2.0.B.2.tgz</code>). The shell script
+to run the program is <code>BioFabric/BioFabricV2BetaRel2.sh</code>.
 </li><br/>
 </ul>
 
 <h4>Installing the Plugin</h4>
 The <b>VISNAB</b> plugin is a Java JAR file. This compiled JAR file is available on the 
-<a href="https://github.com/wjrl/AlignmentPlugin/releases/tag/v1.0.0.1">VISNAB GitHub repository release page</a>. To install it, download the 
-<code>sVISNAB-V1.0.0.1.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
+<a href="https://github.com/wjrl/AlignmentPlugin/releases/tag/v1.1.0.0">VISNAB GitHub repository release page</a>. To install it, download the 
+<code>sVISNAB-V1.1.0.0.jar</code> file, then simply drop that file into a directory on your computer. (Note that there should be only one copy of the
 VISNAB JAR file in that directory.) Start BioFabric, and use <b>File->Set Plugin Directory...</b> to point to the <i>directory</i> where you have placed 
-<code>sVISNAB-V1.0.0.1.jar</code>. Restart BioFabric, and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
+<code>sVISNAB-V1.1.0.0.jar</code>. Restart BioFabric, and the VISNAB commands will appear in the <b>Tools->Network Alignment</b> menu.
 </b>
 
 <hr noshade="true" width="67%"/>
@@ -163,7 +167,7 @@ Available commands include:
 <b>Alignment Cycle layout...</b> will highlight misalignments of clusters and cliques.
 </li>
 <li>
-  <b>Alignment Measures...</b> will show common measures once an alignment has been loaded.
+<b>Alignment Measures...</b> will show common measures once an alignment has been loaded.
 </li>
 </ul>
 
@@ -223,7 +227,7 @@ and the authors disclaim any liability stemming from the use of this software.
 <hr noshade="true"/>
 
 <p>
-<b>Last updated: September 04, 2018</b>
+<b>Last updated: June 11, 2019</b>
 </p>
 </body>
 </html>
